--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@mdx-js/react": "1",
-    "framer-motion": "^6.5.1",
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@mdx-js/loader": "^2.1.2",
+    "@next/mdx": "^12.2.4",
+    "framer-motion": "^6",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "theme-ui": "^0.14.7"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
