--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-useanimations": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
