--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.16",
     "sass": "^1.54.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
