--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "@mdx-js/loader": "^2.1.2",
     "@next/mdx": "^12.2.4",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "framer-motion": "^6",
     "next": "12.2.3",
     "react": "18.2.0",
