--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
+    "classnames": "^2.3.1",
     "next": "12.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
