--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
