--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "v1",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "next": "^12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
