--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.5",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@heroicons/react": "v1",
-    "@nextui-org/react": "^1.0.0-beta.10",
-    "framer-motion": "^6",
+    "@heroicons/react": "^2.0.12",
     "next": "^12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
