--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/TopNavigation/index.jsx", "components/TopNavigation/index.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/TopNavigation/index.jsx", "components/TopNavigation/index.jsx", "context/darkModeContext.js", "context/darkModeContext.js"],
   "exclude": ["node_modules"]
 }
