--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-ripples": "^2.2.1",
     "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
