--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-ripples": "^2.2.1",
+    "react-toastify": "^9.0.8",
     "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
