--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "framer-motion": "^7.5.3",
-    "next": "^12.3.1",
+    "next": "^13.0.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-ripples": "^2.2.1",
     "react-toastify": "^9.0.8",
@@ -33,7 +33,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.1",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
