--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prepare": "panda codegen",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -10,11 +11,23 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.0",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "@pandacss/dev": "^0.16.0",
     "eslint": "^8.51.0",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.8.0",
+    "nuxt-icon": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/content": "^2.8.5",
+    "@nuxt/image": "^1.0.0",
+    "@nuxtjs/fontaine": "^0.4.1",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/nuxt": "^10.5.0",
+    "nuxt-og-image": "^2.1.3"
   }
 }
