--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/line-md": "^1.1.33",
+    "@iconify/json": "^2.2.131",
     "@nuxt/devtools": "^1.0.0",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@pandacss/dev": "^0.16.0",
-    "eslint": "^8.51.0",
+    "@pandacss/dev": "^0.17.0",
+    "@unocss/eslint-config": "^0.56.5",
+    "@unocss/nuxt": "^0.56.5",
+    "eslint": "^8.52.0",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.5.0",
-    "vue": "^3.3.4",
+    "unplugin-icons": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
+    "vue": "^3.3.6",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
@@ -28,6 +35,7 @@
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
-    "nuxt-og-image": "^2.1.3"
+    "nuxt-og-image": "^2.1.3",
+    "sitemap": "^7.1.1"
   }
 }
