--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@giscus/vue": "^2.3.0",
     "@iconify-json/line-md": "^1.1.33",
     "@iconify/json": "^2.2.131",
     "@nuxt/devtools": "^1.0.0",
@@ -20,9 +21,16 @@
     "@pandacss/dev": "^0.17.0",
     "@unocss/eslint-config": "^0.56.5",
     "@unocss/nuxt": "^0.56.5",
+    "@zhead/schema-vue": "^0.9.9",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.52.0",
+    "feed": "^4.2.2",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.5.0",
+    "nuxt-schema-org": "^3.0.1",
+    "nuxt-zero-js": "^0.1.3",
+    "parse5": "^7.1.2",
+    "sass": "^1.69.4",
     "unplugin-icons": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vue": "^3.3.6",
