--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nuxt-zero-js": "^0.1.3",
     "parse5": "^7.1.2",
     "sass": "^1.69.4",
+    "unocss-preset-useful": "^0.3.4",
     "unplugin-icons": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vue": "^3.3.6",
@@ -45,6 +46,7 @@
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "nuxt-og-image": "^2.1.3",
+    "octokit": "^3.1.1",
     "sitemap": "^7.1.1"
   }
 }
