--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vueuse/nuxt": "^10.6.0",
     "nuxt-og-image": "^2.2.4",
     "octokit": "^3.1.1",
-    "sitemap": "^7.1.1"
+    "sitemap": "^7.1.1",
+    "ufo": "^1.3.1"
   }
 }
