Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "t.crawford",
   "private": true,
   "type": "module",
+  "keywords": [
+    "blog",
+    "vue3",
+    "nuxt3",
+    "unocss",
+    "typescript"
+  ],
   "scripts": {
     "prepare": "panda codegen",
     "build": "nuxt build",
