--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
   "devDependencies": {
     "@giscus/vue": "^2.3.0",
     "@iconify-json/line-md": "^1.1.33",
-    "@iconify/json": "^2.2.144",
-    "@nuxt/devtools": "^1.0.3",
+    "@iconify/json": "^2.2.157",
+    "@nuxt/devtools": "^1.0.6",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@unocss/eslint-config": "^0.57.6",
-    "@unocss/nuxt": "^0.57.6",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@unocss/eslint-config": "^0.58.0",
+    "@unocss/nuxt": "^0.58.0",
     "@zhead/schema-vue": "^0.9.9",
     "@zhead/vue": "^0.9.9",
     "cheerio": "^1.0.0-rc.12",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "feed": "^4.2.2",
     "nuxt": "^3.8.1",
-    "nuxt-icon": "^0.6.6",
-    "nuxt-schema-org": "^3.2.0",
+    "nuxt-icon": "^0.6.7",
+    "nuxt-schema-org": "^3.2.3",
     "nuxt-zero-js": "^0.1.3",
     "parse5": "^7.1.2",
     "sass": "^1.69.5",
     "unocss-preset-useful": "^0.3.4",
-    "unplugin-icons": "^0.17.4",
-    "unplugin-vue-components": "^0.25.2",
-    "vue": "^3.3.8",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.26.0",
+    "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@nuxt/content": "^2.9.0",
-    "@nuxt/image": "^1.0.0",
+    "@nuxt/image": "^1.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@vueuse/components": "^10.6.1",
-    "@vueuse/core": "^10.6.1",
+    "@vueuse/components": "^10.7.0",
+    "@vueuse/core": "^10.7.0",
     "@vueuse/nuxt": "^10.6.1",
-    "nuxt-og-image": "^2.2.4",
+    "nuxt-og-image": "^3.0.0-rc.10",
     "octokit": "^3.1.2",
     "sitemap": "^7.1.1",
     "ufo": "^1.3.2"
