Remove fontaine plugin and fontMetrics configuration***
***Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@giscus/vue": "^2.4.0",
