--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "release": "release-it"
   },
   "devDependencies": {
     "@giscus/vue": "^3.0.0",
@@ -36,6 +37,7 @@
     "nuxt-schema-org": "^3.3.6",
     "nuxt-zero-js": "^0.1.3",
     "parse5": "^7.1.2",
+    "release-it": "^17.1.1",
     "unocss-preset-useful": "^0.4.1",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
@@ -51,5 +53,10 @@
     "octokit": "^3.1.2",
     "sitemap": "^7.1.1",
     "ufo": "^1.5.2"
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
