--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "release": "release-it"
+    "release": "release-it",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.4",
     "@iconify-json/hugeicons": "^1.2.1",
-    "@nuxt/content": "^2.13.2",
+    "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "^1.6.0",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.0",
@@ -30,7 +32,8 @@
     "@unocss/nuxt": "^0.63.4",
     "feed": "^4.2.2",
     "nuxt": "^3.13.2",
-    "release-it": "^17.9.0",
+    "nuxt-time": "^1.0.2",
+    "release-it": "^17.10.0",
     "typescript": "^5.6.3",
     "unocss": "^0.63.4",
     "vue": "^3.5.12",
