--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/icon": "^1.5.6",
     "@nuxthq/studio": "^2.1.1",
+    "@nuxthub/core": "^0.7.36",
     "@nuxtjs/color-mode": "^3.5.2",
     "@unocss/eslint-config": "^0.63.6",
     "@unocss/nuxt": "^0.63.6",
@@ -43,7 +44,8 @@
     "unocss": "^0.63.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "wrangler": "^3.83.0"
   },
   "dependencies": {
     "@nuxt/image": "^1.8.1",
