--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.4",
     "@iconify-json/hugeicons": "^1.2.1",
+    "@iconify-json/tabler": "^1.2.7",
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "^1.6.0",
     "@nuxt/eslint": "^0.6.0",
