--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,6 @@ root = true
 [*]
 indent_size = 2
 indent_style = space
-end_of_line = lf
+end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
