--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,7 @@ indent_style = space
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = false
+
+[*.{md,markdown}]
+trim_trailing_whitespace = false
