chore: update nuxt version to 3.14.1592 and refine renovate configuration

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@unocss/nuxt": "^0.63.6",
     "cloudinary": "^2.5.1",
     "feed": "^4.2.2",
-    "nuxt": "^3.13.2",
+    "nuxt": "^3.14.1592",
     "nuxt-carousel": "^1.0.6",
     "nuxt-og-image": "^3.0.8",
     "nuxt-time": "^1.0.2",
@@ -63,8 +63,12 @@
     }
   },
   "renovate": {
-    "labels": ["dependencies"],
-    "extends": ["github>nuxt/renovate-config-nuxt"]
+    "labels": [
+      "dependencies"
+    ],
+    "extends": [
+      "github>nuxt/renovate-config-nuxt"
+    ]
   },
   "version": "1.0.0",
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
