--- a/package.json
+++ b/package.json
@@ -20,41 +20,41 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@iconify-json/catppuccin": "^1.2.6",
-    "@iconify-json/hugeicons": "^1.2.1",
-    "@iconify-json/tabler": "^1.2.8",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/devtools": "^1.6.0",
-    "@nuxt/eslint": "^0.7.1",
-    "@nuxt/fonts": "^0.10.2",
-    "@nuxt/icon": "^1.8.1",
+    "@iconify-json/catppuccin": "^1.2.8",
+    "@iconify-json/hugeicons": "^1.2.2",
+    "@iconify-json/tabler": "^1.2.13",
+    "@nuxt/devtools": "^1.6.4",
+    "@nuxt/eslint": "^0.7.3",
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.2",
     "@nuxthq/studio": "^2.2.1",
-    "@nuxthub/core": "^0.8.7",
+    "@nuxthub/core": "^0.8.8",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@unocss/eslint-config": "^0.64.1",
-    "@unocss/nuxt": "^0.64.1",
+    "@unocss/eslint-config": "^0.65.1",
+    "@unocss/nuxt": "^0.65.1",
     "cloudinary": "^2.5.1",
     "feed": "^4.2.2",
     "nuxt": "^3.14.1592",
     "nuxt-carousel": "^1.0.6",
-    "nuxt-og-image": "^3.0.8",
-    "nuxt-time": "^1.0.2",
+    "nuxt-og-image": "^4.0.1",
+    "nuxt-time": "^1.0.3",
     "release-it": "^17.10.0",
     "release-it-pnpm": "^4.6.3",
-    "sass": "^1.81.0",
-    "typescript": "5.6.3",
-    "unocss": "^0.64.1",
+    "sass": "^1.83.0",
+    "typescript": "5.7.2",
+    "unocss": "^0.65.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5",
+    "vue-router": "^4.5.0",
     "vue-tsc": "^2.1.10",
-    "wrangler": "^3.88.0"
+    "wrangler": "^3.96.0"
   },
   "dependencies": {
+    "@nuxt/content": "3.0.0-alpha.8",
     "@nuxt/image": "^1.8.1",
-    "@vueuse/components": "^11.2.0",
-    "@vueuse/core": "^11.2.0",
+    "@vueuse/components": "^12.0.0",
+    "@vueuse/core": "^12.0.0",
     "@vueuse/motion": "^2.2.6",
-    "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/nuxt": "^12.0.0",
     "octokit": "^4.0.2",
     "ufo": "^1.5.4"
   },
