feat: add typecheck script to package.json and refactor ProseCode components for improved code organization and functionality

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postinstall": "nuxt prepare",
     "release": "release-it",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "nuxt typecheck"
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.8",
