--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@nuxt/content": "3.0.0-alpha.8",
     "@nuxt/image": "^1.8.1",
+    "@radix-ui/colors": "^3.0.0",
     "@vueuse/components": "^12.0.0",
     "@vueuse/core": "^12.0.0",
     "@vueuse/motion": "^2.2.6",
