--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@iconify-json/catppuccin": "^1.2.8",
     "@iconify-json/hugeicons": "^1.2.3",
     "@iconify-json/tabler": "^1.2.13",
+    "@iconify-json/vscode-icons": "^1.2.6",
     "@nuxt/devtools": "^1.6.4",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/fonts": "^0.10.3",
